tests/expression/tuple_fail_out_of_bounds.sy
start :: fn do
    a := (1, 2)
    a[2]
end
// error: $TupleIndexOutOfRange { .. }
